<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LogInActivity"
    android:background="#0f1923"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/redValorant"
            android:fontFamily="@font/gilroy_extrabold"
            android:textSize="40sp"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginBoxes"
                android:hint="@string/nombre_de_usuario"
                app:hintTextColor="@color/redValorant"
                app:boxStrokeColor="@color/redValorant"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/username_login_icon"
                app:startIconTint="@color/redValorant">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/tusker5700bold"
                    android:inputType="text"
                    android:textColor="@color/redValorant" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginBoxes"
                android:hint="@string/contrase_a"
                android:layout_marginTop="20dp"
                app:hintTextColor="@color/redValorant"
                app:boxStrokeColor="@color/redValorant"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/redValorant"
                app:startIconDrawable="@drawable/key_login"
                app:startIconTint="@color/redValorant">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PasswordInp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/tusker5700bold"
                    android:inputType="textPassword"
                    android:textColor="@color/redValorant" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <CheckBox
                    android:id="@+id/rememberme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/recordarme"
                    android:buttonTint="@color/redValorant"
                    android:textColor="@color/redValorant"
                    android:fontFamily="@font/tusker5700bold"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

                <Button
                    android:id="@+id/forgotpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contraseña_f"
                    android:background="@null"
                    android:textColor="@color/redValorant"
                    android:fontFamily="@font/tusker5700bold"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <Button
                android:id="@+id/admin_go_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_go"
                android:textColor="@color/redValorant"
                android:fontFamily="@font/tusker5700bold"
                android:background="@null">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Log_in_btn"
                android:textColor="@color/redValorant"
                android:fontFamily="@font/tusker5700bold"
                android:background="@null">

            </Button>



        </LinearLayout>


    </LinearLayout>

</ScrollView>